--- a/index.html
+++ b/index.html
@@ -596,10 +596,10 @@
         <div class="container">
             <div class="section-title text-center">
                 <h3>Contact</h3>
-                <p>Please fill out the form below and I will get back to you as soon as possible. Thank you.</p>
+                <p>Please click the link below to send me an email. Thank you.</p>
             </div><!-- end title -->
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-12">
                     <div class="contact_form">
                         <div id="message"></div>
@@ -634,7 +634,8 @@
 						</form>
                     </div>
                 </div><!-- end col -->
-            </div><!-- end row -->
+						<!-- </div>end row -->
+						<div class="section-title text-center"> <A class="email-link" HREF="mailto:asafmohammad5@gmail.com">Click Here To Email Me</A></div>
         </div><!-- end container -->
     </div><!-- end section -->
 
@@ -652,7 +653,7 @@
 												<a href="#projects">Projects</a>
                       
                     </p>
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">OnNext</a> Design By : 
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">Asaf Mohammad</a> Design By : 
 					<a href="https://html.design/">html design</a></p>
                 </div>
             </div>
