--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</span>
 				<div class="btn-ber">
 					<!-- <a class="get_btn hvr-bounce-to-top" href="#">Get started</a> -->
-					<a class="learn_btn hvr-bounce-to-top" href="https://docs.google.com/document/d/1rjoEMGpS8W8-QY1d5Bo4pnWJLtMZ4re_pdiVbdf8Vtw/">Resume</a>
+					<a class="learn_btn hvr-bounce-to-top" href="https://drive.google.com/file/d/1dhjumdB9xZdR96mhB_qmPY0McAo_DoiP/view?usp=sharing">Resume</a>
 				</div>
 			</h3>
 		</div>
