--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 					<b>React.js</b>
 					<b>Node.js</b>
 					<b>CSS</b>
+					<b>Ruby on Rails</b>
+					<b>Ruby</b>
+					<b>PostgreSQL</b>
 					<b></b>
 				</span>
 				<div class="btn-ber">
