--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/background-1.jpg')">
+	<section id="home" class="main-banner" style="background: url('uploads/background-1.jpg')">
 		<div class="heading">
 			<span class="image"><img class="img-00" src="uploads/asaf.jpg" alt="" /></span>
 			<h1>Asaf Mohammad</h1>			
@@ -106,7 +106,7 @@
                     <div class="message-box">                        
                         <h2>About Me</h2>
                         <p>Ever since my first video game system, I've always wondered how things worked under-the-hood. After college I started learning and reading about different types of languages and settled on mastering a few that are relevant today. Further below are projects that I have been working on. </p>
-												< I enjoy software development/engineering and working on creating new projects. I am passionate about what I do, and can hit the ground running with your organization. </p>
+												<p> I enjoy software development/engineering and working on creating new projects. I am passionate about what I do, and can hit the ground running with your organization. </p>
 
                         <a href="#contact" class="sim-btn hvr-bounce-to-top"><span>Contact Me</span></a>
                     </div><!-- end messagebox -->
