--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
 				<span class="cd-words-wrapper">	
 					<b class="is-visible">JavaScript</b>
 					<b>HTML</b>
-					<b>React.js</b>
-					<b>Node.js</b>
+					<b>React</b>
+					<b>Node</b>
 					<b>CSS</b>
-					<b>Ruby on Rails</b>
+					<b>Rails</b>
 					<b>Ruby</b>
 					<b>PostgreSQL</b>
-					<b></b>
+					<b>GraphQL</b>
+					<b>MongoDB</b>
 				</span>
 				<div class="btn-ber">
 					<!-- <a class="get_btn hvr-bounce-to-top" href="#">Get started</a> -->
